Fix T78237 UI: NLA colors black and broken

This was caused by missing GL blend. This patch also fix the broken
strip appearance under timeline zoom.